<resources>
    <string name="app_name">Micro IPTV Player</string>
    <string name="app_url" translatable="false">https://play.google.com/store/apps/details?id=com.appbroker.livetvplayer</string>
    <string name="load_remote_playlist">Load Remote Playlist</string>
    <string name="load_local_playlist">Load Local Playlist</string>
    <string name="how_was_your_experience">How was your experience with IPTV app?</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="never">Never</string>
    <string name="submit">Submit</string>
    <string name="not_now">Not Now</string>
    <string name="tell_us">Tell us where we can improve</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="playlist">Playlist</string>
    <string name="notifications">Notifications</string>
    <string name="purchase_canceled">Purchase canceled.</string>
    <string name="service_unavailable">Service unavailable.</string>
    <string name="billing_unavailable">Billing unavailable.</string>
    <string name="product_unavailable">Product unavailable.</string>
    <string name="developer_error">Developer Error</string>
    <string name="error">Error</string>
    <string name="product_already_owned">Product already owned.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="purchase_successful">Purchase successful.</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="search">Search</string>
    <string name="pending_recent_purchase">Pending Purchase</string>
    <string name="pending_purchase_message">You have at least one pending purchase. Once the payment reach us your purchases will be processed.</string>
    <string name="ok">OK</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_switch">Dark Mode Switch</string>
    <string name="settings">Settings</string>
    <string name="tos_privacy">TOS and Privacy</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQ</string>
    <string name="storage_permission_required">Storage permission required.</string>
    <string name="file_pick_canceled">File pick canceled.</string>
    <string name="following_channels_will_be_added">Following channel(s) will be added:</string>
    <string name="select_category">Select category:</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="select_all">Select All</string>
    <string name="add_channels">Add Channels</string>
    <string name="unsellect_all">UNSELECT ALL</string>
    <string name="title_activity_custom_file_picker">Choose File</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="downloads">Downloads</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="sd_card_not_available">SD card is not available</string>
    <string name="last_edited">Last edited:</string>
    <string name="you_cant_go_back">You can\'t go back</string>
    <string name="unknown">Unknown</string>
    <string name="external_chooser">External Chooser</string>
    <string name="category_name">Category Name</string>
    <string name="enter_url">Enter URL</string>
    <string name="url_hint">https://example.com/test.m3u</string>
    <string name="channel_name">Channel Name</string>
    <string name="last_watch">"Last watch:"</string>
    <string name="recently">Recently</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="search_results">Search Results</string>
    <string name="no_result">No result</string>
    <string name="export_playlist">Export Playlist</string>
    <string name="export">EXPORT</string>
    <string name="select_path">Select Path:</string>
    <string name="dev_mail">dev.appbroker@gmail.com</string>
    <string name="send_mail">Send E-mail</string>
    <string name="tos">TOS</string>
    <string name="privacy">Privacy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="export_to">Export to:</string>
    <string name="content_desc_iptv_player_logo">IPTV player logo</string>
    <string name="account_status">Account Status</string>
    <string name="free">Free</string>
    <string name="premium">Premium - No Ads</string>
    <string name="delete_channel_are_you_sure">You are about to delete this channel. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="channel_deleted">Channel deleted successfully.</string>
    <string name="no_app_found">No suitable app found!</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="channel_url">Channel URL</string>
    <string name="share_playlist">Share Playlist</string>
    <string name="want_to_share">Would you like to share the playlist you have created?</string>
    <string name="see">see</string>
    <string name="close">close</string>
    <string name="share">share</string>
    <string name="undo">undo</string>
    <string name="grant">grant</string>
    <string name="ui_locked">Player screen locked. Tap unlock icon to unlock.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="player">Player</string>
    <string name="version">Version</string>
    <string name="build_info">Build Information</string>
    <string name="support">Support</string>
    <string name="report_bug">Report a Bug</string>
    <string name="application">Application</string>
    <string name="play_store">Google Play Store</string>
    <string name="show_store_page">Show Google Play Store Page</string>
    <string name="request_feature">Request Feature</string>
    <string name="play_in_the_background">Play In The Background</string>
    <string name="play_in_the_background_summary_on">Keep playing after you get the app in the background.</string>
    <string name="play_in_the_background_summary_off">Do not play in the background.</string>
    <string name="unlock_by_double_tap_on">Unlock the player by double tapping.</string>
    <string name="unlock_by_double_tap_off">Do not unlock the player by double tapping.</string>
    <string name="unlock_by_double_tap">Unlock By Double Tap</string>
    <string name="leave">Leave?</string>
    <string name="about_to_leave">You are about to leave the application. Are you sure?</string>
    <string name="root_directory">Root directory!</string>

</resources>