<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player">
        <SwitchPreferenceCompat
            app:key="pref_play_background"
            app:title="@string/play_in_the_background"
            app:summaryOn="@string/play_in_the_background_summary_on"
            app:summaryOff="@string/play_in_the_background_summary_off"
            app:defaultValue="false">
        </SwitchPreferenceCompat>
        <SwitchPreferenceCompat
            app:key="pref_unlock_two_tap"
            app:title="@string/unlock_by_double_tap"
            app:summaryOn="@string/unlock_by_double_tap_on"
            app:summaryOff="@string/unlock_by_double_tap_off"
            app:defaultValue="true">
        </SwitchPreferenceCompat>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/support">
        <Preference
            app:key="pref_report"
            app:title="@string/report_bug"
            app:icon="@drawable/ic_baseline_bug_report_24">
        </Preference>
        <Preference
            app:key="pref_request_feature"
            app:title="@string/request_feature"
            app:icon="@drawable/ic_baseline_info_24">
        </Preference>
        <Preference
            app:key="pref_contact"
            app:title="@string/contact"
            app:icon="@drawable/ic_baseline_email_24">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/application">
        <Preference
            app:key="pref_store"
            app:title="@string/play_store"
            app:icon="@drawable/ic_baseline_storefront_24"
            app:summary="@string/show_store_page">

        </Preference>
        <Preference
            app:key="pref_version"
            app:title="@string/version"
            app:summary="1.1.100">

        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>