<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        android:text="@string/add_channels"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/following_channels_will_be_added"
            android:textSize="16sp"
            android:singleLine="true"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_select_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="?attr/colorAccent"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottom_sheet_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/list_item_channel_add"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_category"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/bottom_sheet_category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/bottom_sheet_add_category_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_add_box_24"
                    android:contentDescription="@string/add_category"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bottom_sheet_add_channels_button"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_channels"
            app:backgroundTint="?attr/colorAccent"/>
    </LinearLayout>
</LinearLayout>